--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
-    login_guest: marker for guest tests on main_page 
+    login_guest: marker for guest tests on main_page
+    user_check: marker for authorized user
