requirement changes for review

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     regression: marker for regression tests
     login_guest: marker for guest tests on main_page
     user_check: marker for authorized user
+    need_review: marker for reviewers
